<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/app_logo"
            android:src="@drawable/pic_logo_wired_colored"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/tvRatingGuideline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratingGuideline5"
            android:layout_margin="1dp"
            android:background="@color/transparentWhite"/>

        <TextView
            android:id="@+id/tvRatingGuideline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratingGuideline4"
            android:layout_margin="1dp"
            android:background="@color/transparentWhite"/>

        <TextView
            android:id="@+id/tvRatingGuideline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratingGuideline3"
            android:layout_margin="1dp"
            android:background="@color/transparentWhite"/>

        <TextView
            android:id="@+id/tvRatingGuideline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratingGuideline2"
            android:layout_margin="1dp"
            android:background="@color/transparentWhite"/>

        <TextView
            android:id="@+id/tvRatingGuideline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratingGuideline1"
            android:background="@color/transparentWhite"/>

    </LinearLayout>
</ScrollView>