<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="@drawable/my_splash_login_white_translucent_background">

    <RelativeLayout
        android:id="@+id/relLayApplicantProfilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civUserProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:contentDescription="@string/nav_header_desc"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/my_profile_picture"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/webColorBG"
            android:background="@color/card_material_greenish"/>

        <TextView
            android:id="@+id/tvApplicantOverAllAvg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:background="@drawable/my_round_transparent_background"
            android:layout_alignTop="@id/civUserProfilePic"
            android:layout_alignRight="@id/civUserProfilePic"
            android:layout_alignEnd="@id/civUserProfilePic"
            android:paddingTop="1dp"
            android:paddingLeft="2dp"
            android:paddingStart="2dp"
            android:paddingRight="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="1dp"
            android:textColor="@color/white"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvUserFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:gravity="center_horizontal"/>

</LinearLayout>
